version-23.2/manage/kubernetes/configure-storage.mdx
---
title: Configure Storage in Kubernetes
tags:
  - Kubernetes
  - Helm configuration
description: Configure the Helm chart to use PersistentVolumes, hostPath volumes, or emptyDir volumes.
---

<head>
    <meta name="title" content="Configure Storage in Kubernetes | Redpanda Docs"/>
    <meta name="description" content="Configure the Helm chart to use PersistentVolumes, hostPath volumes, or emptyDir volumes."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/configure-storage/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from './shared/_values-yaml.mdx'
import InitContainer from './shared/_initContainer.mdx'

Redpanda brokers must store their data on disk (`/var/lib/redpanda/data`). By default, the Redpanda Helm chart uses the default StorageClass in a Kubernetes cluster to create one PersistentVolumeClaim for each Pod that runs a Redpanda broker. The default StorageClass in your Kubernetes cluster depends on the Kubernetes platform that you are using. You can customize the Helm chart to use the following storage volumes:

- [PersistentVolumes](#use-persistentvolumes)
- [`hostPath` volumes](#use-hostpath-volumes)
- [`emptyDir` volumes](#use-emptydir-volumes)

## Prerequisites

- If you're configuring Redpanda for production, you must create and mount an **XFS file system** on any storage volumes that host the data directory of Redpanda (`/var/lib/redpanda/data`). XFS is a high-performance file system that is required for running Redpanda in production. NFS file systems are not supported.

- Review the [storage best practices](../../../deploy/deployment-option/self-hosted/kubernetes/kubernetes-best-practices/#storage).

## Use PersistentVolumes

A PersistentVolume is storage in the cluster that has been provisioned by an administrator or dynamically provisioned using StorageClasses.
For details about PersistentVolumes, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/storage/persistent-volumes/).

You can configure the Helm chart to use PersistentVolumes with a static provisioner or a dynamic provisioner.
Redpanda recommends using a StorageClass with a dynamic provisioner. See the [best practices](../../../deploy/deployment-option/self-hosted/kubernetes/kubernetes-best-practices/).

### Dynamic provisioners

A dynamic provisioner creates a PersistentVolume on demand for each Redpanda broker.

Managed Kubernetes platforms and cloud environments usually provide a dynamic provisioner.
If you are running Kubernetes on-premises, make sure that you have a dynamic provisioner for your storage type.

1. Make sure that you have at least one StorageClass in the cluster:

  ```bash
  kubectl get storageclass
  ```

  <details>
  <summary>
  Example output
  </summary>

  In a Google GKE cluster, this is the result:

  ```
  NAME                 PROVISIONER            AGE
  standard (default)   kubernetes.io/gce-pd   1d
  ```

  This StorageClass is marked as the default, which means that this class is used to provision a PersistentVolume when the PersistentVolumeClaim doesn’t specify the StorageClass.

  </details>

1. Configure your StorageClass:

    - To use your Kubernetes cluster's default StorageClass, set `storage.persistentVolume.storageClass` to an empty string (`""`):

      <Tabs groupId="kubernetes-tool">
      <TabItem value="operator" label="Helm + Operator">

      ```yaml title="redpanda-cluster.yaml"
      apiVersion: cluster.redpanda.com/v1alpha1
      kind: Redpanda
      metadata:
        name: redpanda
      spec:
        chartRef: {}
        clusterSpec:
          storage:
            persistentVolume:
              enabled: true
              size: 20Gi
              storageClass: ""
      ```

      ```bash
      kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
      ```

      </TabItem>
      <TabItem value="helm" label="Helm">

      <Tabs groupId="helm-config">
      <TabItem value="values" label="--values">

      ```yaml title="storageclass.yaml"
      storage:
        persistentVolume:
          enabled: true
          size: 20Gi
          storageClass: ""
      ```

      ```bash
      helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
        --values storageclass.yaml --reuse-values
      ```

      </TabItem>
      <TabItem value="flags" label="--set">

      ```bash
      helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
        --set storage.persistentVolume.enabled=true \
        --set storage.persistentVolume.size=20Gi \
        --set storage.persistentVolume.storageClass=""
      ```

      </TabItem>
      </Tabs>

      </TabItem>
      </Tabs>

    - To use a specific StorageClass, set its name in the `storage.persistentVolume.storageClass` configuration:

      <Tabs groupId="kubernetes-tool">
      <TabItem value="operator" label="Helm + Operator">

      ```yaml title="redpanda-cluster.yaml"
      apiVersion: cluster.redpanda.com/v1alpha1
      kind: Redpanda
      metadata:
        name: redpanda
      spec:
        chartRef: {}
        clusterSpec:
          storage:
            persistentVolume:
              enabled: true
              size: 20Gi
              storageClass: "<storage-class>"
      ```

      ```bash
      kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
      ```

      
      </TabItem>
      <TabItem value="helm" label="Helm">

      <Tabs groupId="helm-config">
      <TabItem value="values" label="--values">

      ```yaml title="storageclass.yaml"
      storage:
        persistentVolume:
          enabled: true
          size: 20Gi
          storageClass: "<storage-class>"
      ```

      ```bash
      helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
        --values storageclass.yaml --reuse-values
      ```

      </TabItem>
      <TabItem value="flags" label="--set">

      ```bash
      helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
        --set storage.persistentVolume.enabled=true \
        --set storage.persistentVolume.size=20Gi \
        --set storage.persistentVolume.storageClass="<storage-class>"
      ```

      </TabItem>
      </Tabs>
      </TabItem>
      </Tabs>

### Static provisioners

When you use a static provisioner, an existing PersistentVolume in the cluster is selected and bound to one PersistentVolumeClaim for each Redpanda broker.

1. Create one PersistentVolume for each Redpanda broker. Make sure to create PersistentVolumes with a capacity of at least the value of the `storage.persistentVolume.size` configuration.

1. Set the `storage.persistentVolume.storageClass` to a dash (`"-"`) to use a PersistentVolume with a static provisioner:

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      storage:
        persistentVolume:
          enabled: true
          storageClass: "-"
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">

  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="storageclass.yaml"
  storage:
    persistentVolume:
      enabled: true
      storageClass: "-"
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values storageclass.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set storage.persistentVolume.enabled=true \
    --set storage.persistentVolume.storageClass="-"
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

### Resize PersistentVolumes

To give Redpanda brokers more storage, you can expand the size of PersistentVolumes. The way you expand PersistentVolumes depends on the provisioner that you use.

The process for resizing PersistentVolumes that use a static provisioner varies depending on the way your file system is allocated. Follow the recommended process for your system. You do not need to make any configuration changes to the Helm chart.

To resize a PersistentVolume that uses a dynamic provisioner:

1. Make sure that your StorageClass is capable of volume expansions. For a list of volumes that support volume expansion, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/storage/storage-classes/#allow-volume-expansion).

1. Increase the value of the `storage.persistentVolume.size` configuration:

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      storage:
        persistentVolume:
          enabled: true
          size: <custom-size>Gi
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="persistentvolume-size.yaml"
  storage:
    persistentVolume:
      enabled: true
      size: <custom-size>Gi
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values persistentvolume-size.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set storage.persistentVolume.enabled=true \
    --set storage.persistentVolume.size=<custom-size>Gi
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

### Delete PersistentVolumeClaims

To prevent accidental loss of data, PersistentVolumesClaims are not deleted when Redpanda brokers are removed from a cluster.
It is your responsibility to delete PersistentVolumeClaims when they are no longer needed.
Check the reclaim policy of your PersistentVolumes before deleting a PersistentVolumeClaim.

```bash
kubectl get persistentvolume --namespace <namespace>
```

For descriptions of each reclaim policy, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reclaim-policy).

## Use hostPath volumes

A hostPath volume mounts a file or directory from the host node's file system into your Pod.
For details about hostPath volumes, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/storage/volumes/#hostpath).

To store Redpanda data in hostPath volumes:

1. Set the `storage.hostPath` configuration to the absolute path of a file on the local worker node.
1. Set `storage.persistentVolume.enabled` to `false`.
1. Set `statefulset.initContainers.setDataDirOwnership.enabled` to `true`.

<InitContainer/>

:::warning Use only for development and testing
If the Pod is deleted and recreated, it might be scheduled on another worker node and no longer have access to the same hostPath volume data.
:::

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

```yaml title="redpanda-cluster.yaml"
apiVersion: cluster.redpanda.com/v1alpha1
kind: Redpanda
metadata:
  name: redpanda
spec:
  chartRef: {}
  clusterSpec:
    storage:
      hostPath: "<absolute-path>"
      persistentVolume:
        enabled: false
    initContainers:
      setDataDirOwnership:
        enabled: true
```

```bash
kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
```


</TabItem>
<TabItem value="helm" label="Helm">
<Tabs groupId="helm-config">
<TabItem value="values" label="--values">

```yaml title="hostpath.yaml"
storage:
  hostPath: "<absolute-path>"
  persistentVolume:
    enabled: false
initContainers:
  setDataDirOwnership:
    enabled: true
```

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --values hostpath.yaml --reuse-values
```

</TabItem>
<TabItem value="flags" label="--set">

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --set storage.persistentVolume.enabled=false \
  --set storage.hostPath=<absolute-path> \
  --set statefulset.initContainers.setDataDirOwnership.enabled=true
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

## Use emptyDir volumes

An emptyDir volume is first created when a Pod is assigned to a node, and the volume exists as long as the Pod is running on that node.
For details about emptyDir volumes, see the [Kubernetes documentation](https://kubernetes.io/docs/concepts/storage/volumes/#emptydir).

To store Redpanda data in emptyDir volumes,
set the `storage.hostPath` configuration to an empty string (`""`),
and set `storage.persistentVolume.enabled` to `false`.

:::warning Use only for development and testing
When a Pod is removed from a node for any reason, the data in the emptyDir volume is deleted permanently.
:::

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

```yaml title="redpanda-cluster.yaml"
apiVersion: cluster.redpanda.com/v1alpha1
kind: Redpanda
metadata:
  name: redpanda
spec:
  chartRef: {}
  clusterSpec:
    storage:
      hostPath: ""
      persistentVolume:
        enabled: false
```

```bash
kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
```


</TabItem>
<TabItem value="helm" label="Helm">
<Tabs groupId="helm-config">
<TabItem value="values" label="--values">

```yaml title="emptydir.yaml"
storage:
  hostPath: ""
  persistentVolume:
    enabled: false
```

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --values emptydir.yaml --reuse-values
```

</TabItem>
<TabItem value="flags" label="--set">

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --set storage.persistentVolume.enabled=false
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

## Next steps

Enable [rack awareness](../kubernetes-rack-awareness) to minimize data loss in the event of a rack failure.

## Suggested reading

- [Redpanda Helm Specification](../../../reference/redpanda-helm-spec)
- [Redpanda CRD Reference](../../../reference/crd)
